# dida_geom

./: .clang-format  CMakeLists.txt  Cargo.toml  LICENSE  README.md
apps/viz/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  scene.cpp  scene.hpp  scene.inl  scene_selection.cpp  scene_selection.hpp  scene_tree_view.cpp  scene_tree_view.hpp  scene_view.cpp  scene_view.hpp  zoom_pan_view.cpp  zoom_pan_view.hpp
apps/viz/tests/: CMakeLists.txt  scene_selection_tests.cpp  scene_tests.cpp  scene_tree_view_tests.cpp
dida/: CMakeLists.txt  Cargo.toml  area.cpp  area.hpp  array_view.hpp  array_view.inl  assert.hpp  convex_polygon2.cpp  convex_polygon2.hpp  convex_polygon2.inl  convex_polygon2_utils.cpp  convex_polygon2_utils.hpp  parser.cpp  parser.hpp  parser.inl  perturbation.hpp  perturbation.inl  point2.hpp  point2.inl  polygon2.cpp  polygon2.hpp  polygon2.inl  polygon2_utils.cpp  polygon2_utils.hpp  predicates.cpp  predicates.hpp  scalar.hpp  scalar.inl  segment2.hpp  segment2.inl  utils.hpp  utils.inl  vector2.cpp  vector2.hpp
dida/benches/: convex_polygons_intersect.rs
dida/benchmarks/: CMakeLists.txt  convex_polygons_intersection_area_benchmark.cpp  is_within_benchmark.cpp  polygons_intersect_shootout.cpp  side_vertices_benchmark.cpp  stock_objects.cpp  stock_objects.hpp
dida/detail/: convex_polygons_intersection.hpp  convex_polygons_intersection.inl  parser.cpp  parser.hpp  parser.inl  polygon_sweep.hpp  polygon_sweep.inl  tmp_object_pool.hpp  tmp_object_pool.inl  vertical_decomposition.cpp  vertical_decomposition.hpp  vertical_decomposition.inl  vertical_decomposition_dnc_builder.cpp  vertical_decomposition_dnc_builder.hpp  vertical_decomposition_merge.cpp  vertical_decomposition_merge.hpp  vertical_decomposition_operations.cpp  vertical_decomposition_operations.hpp  vertical_decomposition_sweep_line_builder.cpp  vertical_decomposition_sweep_line_builder.hpp  vertical_decomposition_zigzag_phase.cpp  vertical_decomposition_zigzag_phase.hpp
dida/detail/tests/: CMakeLists.txt  convex_polygons_intersection_tests.cpp  parser_tests.cpp  polygon_sweep_tests.cpp  tmp_object_pool_tests.cpp  vertical_decomposition_dnc_builder_tests.cpp  vertical_decomposition_merge_tests.cpp  vertical_decomposition_sweep_line_builder_tests.cpp  vertical_decomposition_test_utils.cpp  vertical_decomposition_test_utils.hpp  vertical_decomposition_test_utils_tests.cpp  vertical_decomposition_tests.cpp  vertical_decomposition_zigzag_phase_tests.cpp
dida/detail/vertical_decomposition/: divide_and_conquer_builder.cpp  divide_and_conquer_builder.hpp  intersect.cpp  intersect.hpp  merge.cpp  merge.hpp  sweep_line_builder.cpp  sweep_line_builder.hpp  triangulate.cpp  triangulate.hpp  vertical_decomposition.hpp  vertical_decomposition.inl  zigzag_phase.cpp  zigzag_phase.hpp
dida/detail/vertical_decomposition/tests/: CMakeLists.txt  divide_and_conquer_builder_tests.cpp  merge_tests.cpp  sweep_line_builder_tests.cpp  test_utils.cpp  test_utils.hpp  test_utils_tests.cpp  triangulate_tests.cpp  vertical_decomposition_tests.cpp  zigzag_phase_tests.cpp
dida/math/: big_int_utils.inl  fraction.hpp  fraction.inl  int128.cpp  int128.hpp  int128.inl
dida/math/tests/: CMakeLists.txt  big_int_utils_tests.cpp  fraction_tests.cpp  int128_tests.cpp
dida/src/: cyclic.rs  lib.rs  point2.rs  predicates.rs  scalar.rs  vec2.rs
dida/src/bezier_64/: bezier_curve.rs  mod.rs  unit_interval_scalar.rs  unit_interval_vector.rs
dida/src/container/: array_builder.rs  mod.rs  static_vec.rs
dida/src/convex/: convex_arc_bisector.rs  convex_hull.rs  convex_polygon.rs  distance.rs  intersect.rs  minkowski_addition.rs  mod.rs  validation.rs
dida/src/parser/: geometry_parsers.rs  mod.rs  parser.rs  scalar_parser.rs
dida/tests/: CMakeLists.txt  area_tests.cpp  array_view_tests.cpp  box2_tests.cpp  convex_polygon2_tests.cpp  convex_polygon2_utils_tests.cpp  parser_tests.cpp  perturbation_tests.cpp  point2_tests.cpp  polygon2_tests.cpp  polygon2_utils_tests.cpp  predicates_tests.cpp  scalar_tests.cpp  segment2_tests.cpp  utils_tests.cpp  vector2_tests.cpp
dida/viz/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  primitives_tree_view.cpp  primitives_tree_view.hpp  primitives_view.cpp  primitives_view.hpp  scene.cpp  scene.hpp  scene.inl  scene_tree_view.cpp  scene_tree_view.hpp  scene_view.cpp  scene_view.hpp  zoom_pan_view.cpp  zoom_pan_view.hpp
dida/viz/tests/: CMakeLists.txt  primitives_tree_view_tests.cpp  scene_tests.cpp  scene_tree_view_tests.cpp
include/dida/: CMakeLists.txt  area.hpp  array_view.hpp  array_view.inl  box2.hpp  box2.inl  convex_polygon2.hpp  convex_polygon2.inl  parser.hpp  perturbation.hpp  point2.hpp  polygon2_utils.hpp  polygon2_utils.inl  scalar.hpp  scalar.inl  utils.hpp  vector2.inl
include/dida/math/: CMakeLists.txt  big_int_utils.hpp  fraction.hpp  int128.hpp  int128.inl
shootout/: CMakeLists.txt  polygon_intersection_shootout.cpp
src/dida/: CMakeLists.txt  box2.cpp  convex_polygon2.cpp  parser.cpp  polygon2_utils.cpp  scalar.cpp  segment2.cpp
src/dida/detail/: CMakeLists.txt  convex_polygons_intersection.hpp
src/dida/detail/tests/: CMakeLists.txt  tmp_object_pool_tests.cpp
src/dida/detail/vertical_decomposition/: CMakeLists.txt  divide_and_conquer_builder.cpp  divide_and_conquer_builder.hpp  intersect.cpp  merge.cpp  merge.hpp  sweep_line_builder.cpp  triangulate.hpp  vertical_decomposition.hpp  vertical_decomposition.inl  zigzag_phase.cpp  zigzag_phase.hpp
src/dida/detail/vertical_decomposition/tests/: CMakeLists.txt  divide_and_conquer_builder_tests.cpp  intersect_tests.cpp  merge_tests.cpp  sweep_line_builder_tests.cpp  test_utils.cpp  test_utils.hpp  test_utils_tests.cpp  vertical_decomposition_tests.cpp  (+4 more)
src/dida/math/: CMakeLists.txt  int128.cpp
src/dida/math/tests/: CMakeLists.txt  fraction_tests.cpp
src/dida/tests/: CMakeLists.txt  area_tests.cpp  array_view_tests.cpp  box2_tests.cpp  convex_polygon2_utils_tests.cpp  parser_tests.cpp  polygon2_tests.cpp  polygon2_utils_tests.cpp  predicates_tests.cpp  segment2_tests.cpp
(+7 files in other folders)
