cmake_minimum_required(VERSION 3.16.3)

add_library(dida
    detail/vertical_decomposition/divide_and_conquer_builder.cpp
    detail/vertical_decomposition/divide_and_conquer_builder.hpp
    detail/vertical_decomposition/merge.cpp
    detail/vertical_decomposition/merge.hpp
    detail/vertical_decomposition/sweep_line_builder.cpp
    detail/vertical_decomposition/sweep_line_builder.hpp
    detail/vertical_decomposition/triangulate.cpp
    detail/vertical_decomposition/triangulate.hpp
    detail/vertical_decomposition/vertical_decomposition.hpp
    detail/vertical_decomposition/vertical_decomposition.inl
    detail/vertical_decomposition/zigzag_phase.cpp
    detail/vertical_decomposition/zigzag_phase.hpp
    detail/convex_polygons_intersection.hpp
    detail/convex_polygons_intersection.inl
    detail/polygon_sweep.hpp
    detail/polygon_sweep.inl
    detail/tmp_object_pool.hpp
    detail/tmp_object_pool.inl
    math/big_int_utils.hpp
    math/big_int_utils.inl
    math/fraction.hpp
    math/fraction.inl
    math/int128.cpp
    math/int128.hpp
    math/int128.inl
    area.cpp
    area.hpp
    array_view.hpp
    array_view.inl
    box2.cpp
    box2.hpp
    box2.inl
    assert.hpp
    convex_polygon2_utils.cpp
    convex_polygon2_utils.hpp
    convex_polygon2.cpp
    convex_polygon2.hpp
    convex_polygon2.inl
    parser.cpp
    parser.hpp
    parser.inl
    perturbation.hpp
    perturbation.inl
    point2.hpp
    point2.inl
    polygon2_utils.hpp
    polygon2_utils.inl
    polygon2.cpp
    polygon2.hpp
    polygon2.inl
    predicates.cpp
    predicates.hpp
    scalar.cpp
    scalar.hpp
    scalar.inl
    segment2.cpp
    segment2.hpp
    segment2.inl
    vector2.cpp
    vector2.hpp
    vector2.inl)

target_include_directories(dida PUBLIC ..)

if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    add_subdirectory(benchmarks)
    add_subdirectory(detail/tests)
    add_subdirectory(detail/vertical_decomposition/tests)
    add_subdirectory(math/tests)
    add_subdirectory(tests)
    add_subdirectory(viz)
endif()